syntax = "proto3";

package access_v1;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/Tel3scop/auth/pkg/access_v1;access_v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Auth API"
    version: "1.0.0"
    contact: {
      name: "Evgeniy Evstifeev"
      email: "evstifeevea@gmail.com"
    };
  };

  host: "localhost:8080",
  schemes: HTTP,
  schemes: HTTPS,
  consumes: "application/json",
  produces: "application/json",
};


service AccessV1 {
  // Создать нового пользователя
  rpc Check(CheckRequest) returns (google.protobuf.Empty){
    option (google.api.http) = {
      get: "/access/v1/check"
    };
  }
}

message CheckRequest {
  // Адрес endpoint
  string endpoint_address = 1 [(validate.rules).string = {min_len:1}];
}
